# hacking-kinect

./: LICENSE.txt  README.md
978-1-4302-3867-6/ch04/Background Subtraction/: testApp.cpp  testApp.h
978-1-4302-3867-6/ch04/Blurring/: main.cpp  testApp.cpp
978-1-4302-3867-6/ch04/Brightest Pixel Tracking/: main.cpp  testApp.cpp  testApp.h
978-1-4302-3867-6/ch04/Combining Frame Differencing with Background Subtraction/: testApp.cpp  testApp.h
978-1-4302-3867-6/ch04/Frame Differencing/: main.cpp  testApp.cpp
978-1-4302-3867-6/ch05/: kinect-chapter5-example.c
978-1-4302-3867-6/ch07/: CMakeLists.txt  cloud_wind.cpp
978-1-4302-3867-6/ch08/: CMakeLists.txt  kinect_calibration.h  kinect_slam.cpp  kinect_slam_freenect.cpp  kinect_slam_freenect.h  kinect_slam_gl.cpp  kinect_slam_gl.h  kinect_slam_tracking.cpp  kinect_slam_tracking.h
978-1-4302-3867-6/ch09/chapter9-code/: CMakeLists.txt  README.txt  cloud_extrusion.cpp  cluster_recognition.cpp  marked_viewpoint_modeler.cpp  ply.cpp  ply.h  utils.cpp  utils.h
978-1-4302-3867-6/ch09/chapter9-code/aruco/: board.h  boarddetector.cpp  boarddetector.h  cameraparameters.cpp  cameraparameters.h  cvdrawingutils.cpp  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h
978-1-4302-3867-6/ch09/chapter9-code/data/models/: ball.pcd  book.pcd  can.pcd  car.pcd  cube.pcd  dog.pcd  statue.pcd
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0000/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0001/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0002/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0003/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0004/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0005/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0006/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0007/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0008/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0009/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0010/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0011/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0012/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0013/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0014/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0015/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0016/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0017/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0018/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0019/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0020/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0021/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0022/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/statue/view0023/raw/: depth.raw
978-1-4302-3867-6/ch09/chapter9-code/data/table/raw/: depth.raw
